--- a/assets/css/_contact.scss
+++ b/assets/css/_contact.scss
@@ -1,6 +1,6 @@
 .contact {
   background-color: $secondary;
-  background-image: url("../images/bg-contact.jpg");
+  background-image: url("../images/projects/bg-contact.jpg");
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -15,7 +15,7 @@
     height: 100%;
     width: 100%;
     background-color: rgba($secondary, 0.8);
-    z-index: -1;
+    z-index: 0;
   }
 
   .col-form {
@@ -24,6 +24,8 @@
     justify-content: center;
     align-items: center;
     color: $gray-2;
+    position: relative;
+    z-index: 2;
 
     .col-social {
       display: block;
@@ -169,6 +171,9 @@
   }
 
   .col-bg {
+    position: relative;
+    z-index: 2;
+    
     svg {
       .number-bg,
       .number-bg-front,
