--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,7 +75,7 @@ section {
   width: max-content;
   font-family: "Courier New", Courier, monospace;
   font-weight: 800;
-  z-index: 1;
+  z-index: 2;
 }
 
 .desc {
@@ -466,7 +466,7 @@ section {
 
 .contact {
   background-color: #0e0e0e;
-  background-image: url("../images/bg-contact.jpg");
+  background-image: url("../images/projects/bg-contact.jpg");
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -481,7 +481,7 @@ section {
   height: 100%;
   width: 100%;
   background-color: rgba(14, 14, 14, 0.8);
-  z-index: -1;
+  z-index: 0;
 }
 .contact .col-form {
   display: flex;
@@ -489,6 +489,8 @@ section {
   justify-content: center;
   align-items: center;
   color: #f5f5f5;
+  position: relative;
+  z-index: 2;
 }
 .contact .col-form .col-social {
   display: block;
@@ -605,6 +607,10 @@ section {
 .contact .col-form form .feedback {
   color: #f5f5f5;
   animation: appears 0.2s ease-in-out;
+}
+.contact .col-bg {
+  position: relative;
+  z-index: 2;
 }
 .contact .col-bg svg .number-bg,
 .contact .col-bg svg .number-bg-front,
